Fixing the initial images

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ layout: base
           <div class="card">
             <div class="card-image">
               <figure class="image is-4by3">
-                <img src="images/loader.svg" data-src="{{post.cover_image}}" alt="">
+                <img src="http://res.cloudinary.com/websiddu/image/upload/c_scale,w_800/photos/{{post.cover_image}}.jpg" alt="">
               </figure>
             </div>
             <div class="card-content">
