--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@ layout: base
   <div class="columns is-multiline posts-list is-gapless">
     {% for post in paginator.posts %}
       {% unless post.draft %}
-        <section class="index column is-4">
+        <section class="index column is-one-third-tablet is-one-quarter-desktop is-one-quarter-widescreen is-one-quarter-fullhd">
             <a href="{{ post.url }}" rel="prefetch">
               <div class="card">
                 <div class="card-image">
-                  <figure class="image is-4by3">
+                  <figure class="image">
                     <img src="http://res.cloudinary.com/websiddu/image/upload/w_800,h_800,c_fill/photos/{{post.cover_image}}.jpg" alt="{{post.title}}">
                   </figure>
                 </div>
